test/typeCheckTest/fail/test42.ic
class E{
        void main(string[] args){
                 int args = 0;
         }
  }